--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h4 style="padding-left: 20px; padding-right: 20px; text-align: justify; font-size:25px;"> Namaku <b>Muhammed Iqbal Baihaqi Hidayatullah</b>, bisa dipanggil <b><i>iqbal</i></b>. Aku lahir tanggal 16 November tahun 2005, di Jakarta.<br><br>Aku orang Jakarta. Aku berumur 17 tahun. Aku berasama keluargaku yang terdiri dari 4 orang yaitu ayah, ibu, kakak, dan aku. Sekarang aku bersekolah di SMKN 50 Jakarta kelas XII jurusan Multimedia</h4>
 
 <!-- Page Content Like -->
-  <div class="contain">
+  <div class="contain" id="Like">
     <center><h3><b>- Like -</b></p></center>
       <p> Hal yang kusuka :</p>
 
