--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <!-- Page Content Description -->
 <center id="Description">
-  <h3><b>- Description -</b></h3>
+  <h3 style="padding-top: 50px"><b>- Description -</b></h3>
     <div class="column">
       <img src="css/fotoaq.jpeg">
     </div>
@@ -45,7 +45,7 @@
 
 <!-- Page Content Like -->
   <div class="contain" id="Like">
-    <center><h3><b>- Like -</b></p></center>
+    <center><h3 style="padding-top: 60px"><b>- Like -</b></p></center>
       <p> Hal yang kusuka :</p>
 
       <div class="columns1">
