--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
   </div>
 
 <!-- Page Content Been Studied -->
-<div class="study">
-  <center id="Studied">
-    <h3><b>- Been Studied -</b></p>
+<div class="study" style="margin-top: 260px">
+  <center>
+    <h3><b id="Studied">- Been Studied -</b></p>
     <p> Yang selama ini aku pelajari di SMKN 50 Jakarta ini adalah :</p>
   </center>
 </div>
