--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </div>
 
 <!-- Page Content Been Studied -->
-<div class="study"  id="Studied" style="margin-top: 260px">
+<div class="study"  id="Studied" style="margin-top: 260px; padding-top:10px;">
   <center>
     <h3><b>- Been Studied -</b></p>
     <p> Yang selama ini aku pelajari di SMKN 50 Jakarta ini adalah :</p>
