--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </div>
 
 <!-- Page Content Been Studied -->
-<div class="study"  id="Studied" style="margin-top: 180px; padding-top:10px;">
+<div class="study" id="Studied" style="margin-top: 180px; padding-top:10px;">
   <center>
     <h3><b>- Been Studied -</b></p>
     <p> Yang selama ini aku pelajari di SMKN 50 Jakarta ini adalah :</p>
@@ -119,7 +119,7 @@
 </div>
 
 <!-- Page Content Goals -->
-<div class="centaur" id="Goals" style="margin-top: 600px; padding-top: 50px;>
+<div class="centaur" id="Goals" style="margin-top: 600px; padding-top: 50px;">
   <center><h3><b>- Goals -</b></h3></center>
       
       <div class="containerss">
