--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <li>Pembuatan Logo</li>
     <li>Pembuatan Poster</li>
     <li>Adobe Photoshop</li>
-    <li>Adobe After Effects</li>
+    <li>Penggunaan Adobe After Effects</li>
     <li>Pembuatan Animasi & Bumper</li>
   </ul>
 </div>
